[gd_scene load_steps=4 format=2]

[ext_resource path="res://title_screen/settings/settings_scene.gd" type="Script" id=1]
[ext_resource path="res://ui/cancel_shortcut.tres" type="ShortCut" id=2]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=3]

[node name="Settings" type="Control"]
anchor_left = 0.00125241
anchor_right = 1.00125
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 31.0
margin_right = -48.9985
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 543.0
margin_bottom = 26.0
text = "ui_settings"
align = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 543.0
margin_bottom = 275.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 536.0
margin_bottom = 238.0

[node name="SoundSettings" type="Control" parent="VBoxContainer/PanelContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 48.0
margin_right = -7.0
margin_bottom = -7.0

[node name="Container" type="VBoxContainer" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -28.0
margin_right = 150.0
margin_bottom = 28.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolume" type="HBoxContainer" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container"]
margin_right = 396.0
margin_bottom = 26.0
alignment = 1

[node name="VolumeLabel" type="Label" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/MasterVolume"]
margin_right = 192.0
margin_bottom = 26.0
size_flags_horizontal = 10
size_flags_vertical = 1
text = "ui_master_volume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/MasterVolume"]
margin_left = 196.0
margin_top = 5.0
margin_right = 396.0
margin_bottom = 21.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="MusicVolume" type="HBoxContainer" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container"]
margin_top = 30.0
margin_right = 396.0
margin_bottom = 56.0
alignment = 1

[node name="VolumeLabel" type="Label" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/MusicVolume"]
margin_left = 12.0
margin_right = 192.0
margin_bottom = 26.0
size_flags_horizontal = 10
size_flags_vertical = 1
text = "ui_music_volume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/MusicVolume"]
margin_left = 196.0
margin_top = 5.0
margin_right = 396.0
margin_bottom = 21.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="SfxVolume" type="HBoxContainer" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container"]
margin_top = 60.0
margin_right = 396.0
margin_bottom = 86.0
alignment = 1

[node name="VolumeLabel" type="Label" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/SfxVolume"]
margin_left = 36.0
margin_right = 192.0
margin_bottom = 26.0
size_flags_horizontal = 10
size_flags_vertical = 1
text = "ui_sfx_volume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/SfxVolume"]
margin_left = 196.0
margin_top = 5.0
margin_right = 396.0
margin_bottom = 21.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="LanguageSettings" type="Control" parent="VBoxContainer/PanelContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 48.0
margin_right = -7.0
margin_bottom = -7.0

[node name="Container" type="VBoxContainer" parent="VBoxContainer/PanelContainer/TabContainer/LanguageSettings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -28.0
margin_right = 150.0
margin_bottom = 28.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OtherSettings" type="ScrollContainer" parent="VBoxContainer/PanelContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 48.0
margin_right = -7.0
margin_bottom = -7.0

[node name="Container" type="VBoxContainer" parent="VBoxContainer/PanelContainer/TabContainer/OtherSettings"]
margin_left = 169.0
margin_top = 75.0
margin_right = 345.0
margin_bottom = 101.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenCheckbox" type="CheckBox" parent="VBoxContainer/PanelContainer/TabContainer/OtherSettings/Container"]
margin_right = 176.0
margin_bottom = 26.0
text = "ui_fullscreen"

[node name="HintsCheckbox" type="CheckBox" parent="VBoxContainer/PanelContainer/TabContainer/OtherSettings/Container"]
margin_right = 176.0
margin_bottom = 26.0
text = "ui_enable_hints"

[node name="ScreenshakeCheckbox" type="CheckBox" parent="VBoxContainer/PanelContainer/TabContainer/OtherSettings/Container"]
margin_right = 176.0
margin_bottom = 26.0
text = "ui_enable_screenshake"

[node name="BackToTitleButton" type="Button" parent="VBoxContainer"]
margin_left = 168.0
margin_top = 279.0
margin_right = 374.0
margin_bottom = 319.0
size_flags_horizontal = 4
shortcut_in_tooltip = false
shortcut = ExtResource( 2 )
text = "ui_back_to_title"

[connection signal="visibility_changed" from="." to="." method="_on_Settings_visibility_changed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/MasterVolume/VolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/MusicVolume/VolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/TabContainer/SoundSettings/Container/SfxVolume/VolumeSlider" to="." method="_on_SfxVolumeSlider_value_changed"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/TabContainer/OtherSettings/Container/FullscreenCheckbox" to="." method="_on_FullscreenCheckbox_toggled"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/TabContainer/OtherSettings/Container/HintsCheckbox" to="." method="_on_HintsCheckbox_toggled"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/TabContainer/OtherSettings/Container/ScreenshakeCheckbox" to="." method="_on_ScreenshakeCheckbox_toggled"]
[connection signal="pressed" from="VBoxContainer/BackToTitleButton" to="." method="_on_BackToTitleButton_pressed"]
